--- a/src/sections/navbar/navbar.css
+++ b/src/sections/navbar/navbar.css
@@ -27,6 +27,28 @@ nav {
     gap: 3.5rem;
 }
 
+.nav__menu a {
+    position: relative;
+}
+  
+.nav__menu a::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -4px;
+    height: 2px;
+    background-color: transparent;
+    transform: scaleX(0);
+    transform-origin: center;
+    transition: transform 0.6s, background-color 0.6s;
+}
+  
+.nav__menu a:hover::before {
+    transform: scaleX(1);
+    background-color: white;
+}
+
 #theme__icon {
     background: transparent;
     color: white;
