--- a/src/index.css
+++ b/src/index.css
@@ -165,7 +165,19 @@ h6 {
     padding: 0.5rem 1.2rem;
 }
 
-
+::-webkit-scrollbar {
+    width: 10px;
+}
+  
+::-webkit-scrollbar-thumb {
+    background-color: #808080; 
+    border-radius: 5px;
+}
+  
+::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+}
+  
 /* MEDIA QUERIES (tablets) */
 @media screen and (max-width: 1024px) {
     body {
