--- a/src/sections/about/about.css
+++ b/src/sections/about/about.css
@@ -1,97 +1,95 @@
 .about__container {
-    display: flex;
-    justify-content: space-around;
-    gap: 10%;
+  display: flex;
+  justify-content: space-around;
+  gap: 10%;
 }
 
 .about__portrait {
-    height: 40rem;
-    border: 1rem solid var(--color-white);
-    transition: var(--transition);    
+  height: 40rem;
+  border: 1rem solid var(--color-white);
+  transition: var(--transition);
 }
 
 .about__portrait img {
-    max-width: 100%;
-    height: 100%;
+  max-width: 100%;
+  height: 100%;
 }
 
 .about__portrait:hover {
-    border-width: 0;
+  border-width: 0;
 }
 
 .about__cards {
-    margin: 3rem 0 1.5rem;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1.5rem;
+  margin: 2rem auto 1.5rem;
+  display: grid;
+  width: 80%;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.5rem;
 }
 
 .card.about__card {
-    text-align: center;
+  text-align: center;
 }
 
 .about__card-icon {
-    font-size: 1.3rem;
-    color: var(--color-black);
-    border-radius: var(--border-radius-3);
-    width: fit-content;
-    margin-inline: auto;
-    padding: 0.6rem;
-    display: flex;
-    align-items: center;
-    transition: var(--transition);
+  font-size: 1.3rem;
+  color: var(--color-black);
+  border-radius: var(--border-radius-3);
+  width: fit-content;
+  margin-inline: auto;
+  padding: 0.1rem;
+  display: flex;
+  align-items: center;
+  transition: var(--transition);
 }
 
 .card.about__card:hover .about__card-icon {
-    background: var(--color-primary);
-    color: var(--color-white);
+  background: var(--color-primary);
+  color: var(--color-white);
 }
 
 .card.about__card h5 {
-    margin: 1rem 0;
+  margin: 1rem 0;
 }
 
 .about__right p {
-    margin-bottom: 0.8rem;
+  margin-bottom: 0.8rem;
+  font-size: 1.04rem;
 }
 
 .about__right .btn {
-    margin-top: 2.5rem;
+  margin-top: 0.7rem;
 }
-
-
 
 /* MEDIA QUERIES (tablets) */
 @media screen and (min-width: 1025px) {
-    .about__right {
-        width: 50%;
-    }
+  .about__right {
+    width: 50%;
+  }
 }
 
 @media screen and (max-width: 1024px) {
-    .about__left {
-        display: none;
-    }
+  .about__left {
+    display: none;
+  }
 
-    .about__container {
-        grid-template-columns: 1fr;
-    }
+  .about__container {
+    grid-template-columns: 1fr;
+  }
 
-    .about__right h2 {
-        text-align: center;
-    }
+  .about__right h2 {
+    text-align: center;
+  }
 }
-
 
 /* MEDIA QUERIES (phones) */
 @media screen and (max-width: 600px) {
-.about__cards {
+  .about__cards {
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
-}
+  }
 
-.about__right .btn {
+  .about__right .btn {
     margin-top: 2rem;
-}
-
+  }
 }
